gsoap: whitespace changes, add modeline
git-svn-id: https://svn.macports.org/repository/macports/trunk@73477 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gsoap/Portfile
+++ b/dports/devel/gsoap/Portfile
@@ -1,22 +1,26 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem          1.0
 
-name				gsoap
+name                gsoap
 version             2.7.17
 set branch          [join [lrange [split ${version} .] 0 1] .]
 platforms           darwin
-categories			devel
-maintainers			stechert
-description			offers an XML to C/C++ language binding to ease the \
-				development of SOAP/XML Web services in C and C/C++
-long_description		The gSOAP toolkit is a cross-platform development \
-				environment for C and C++ SOAP/XML Web services (SOAP \
-				1.1/1.2, WSDL 1.1). gSOAP supports XML serialization of \
-				native C/C++ data types. Includes stub/skeleton compiler, \
-				HTTP Web server, and much more.
-homepage			http://www.cs.fsu.edu/~engelen/soap.html
-master_sites			sourceforge:gsoap2
+categories          devel
+maintainers         stechert
+
+description         offers an XML to C/C++ language binding to ease the \
+                    development of SOAP/XML Web services in C and C/C++
+
+long_description    The gSOAP toolkit is a cross-platform development \
+                    environment for C and C++ SOAP/XML Web services (SOAP \
+                    1.1/1.2, WSDL 1.1). gSOAP supports XML serialization of \
+                    native C/C++ data types. Includes stub/skeleton compiler, \
+                    HTTP Web server, and much more.
+
+homepage            http://www.cs.fsu.edu/~engelen/soap.html
+master_sites        sourceforge:gsoap2
 
 use_zip             yes
 distname            ${name}_${version}
@@ -27,7 +31,7 @@ checksums           sha1    573a08ab7d8ca2d970158911482c308484fdd5ed \
 
 depends_lib         port:openssl
 
-use_parallel_build no
+use_parallel_build  no
 
 livecheck.type      regex
 livecheck.url       http://sourceforge.net/projects/gsoap2/files/
