MyPaint: add tango-icon-theme dependency; see #27194
git-svn-id: https://svn.macports.org/repository/macports/trunk@73479 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/MyPaint/Portfile
+++ b/dports/graphics/MyPaint/Portfile
@@ -6,6 +6,7 @@ PortSystem                  1.0
 name                        MyPaint
 set my_name                 mypaint
 version                     0.9.0
+revision                    1
 homepage                    http://mypaint.info/
 categories                  graphics
 maintainers                 ryandesign
@@ -33,6 +34,8 @@ depends_build               port:scons \
 depends_lib                 port:protobuf-python26 \
                             port:py26-numpy \
                             port:py26-gtk
+
+depends_run                 port:tango-icon-theme
 
 patchfiles                  patch-SConstruct.diff
 
