gnome/gst-plugins-bad added optional dependency which would be enabled by default, removed variant to provide that dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@73481 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gst-plugins-bad/Portfile
+++ b/dports/gnome/gst-plugins-bad/Portfile
@@ -31,6 +31,7 @@ depends_lib port:gst-plugins-base \
             port:faad2 \
             port:jack \
             port:jasper \
+            port:libdc1394 \
             port:libdca \
             port:libexif \
             port:libglade2 \
@@ -54,8 +55,7 @@ depends_lib port:gst-plugins-base \
 #
 
 configure.compiler          gcc-4.0
-configure.args              --disable-dc1394 \
-                            --disable-quicktime \
+configure.args              --disable-quicktime \
                             --enable-experimental \
                             --enable-static
 configure.cppflags-append   "-L${prefix}/lib"
@@ -74,10 +74,6 @@ post-patch {
 # gst-plugins-bad itself is not universal
 universal_variant   no
 
-variant dc1394 description {Enable Firewire digital camera support using libdc1394} {
-        configure.args-delete --disable-dc1394
-        depends_lib-append port:libdc1394
-}
 variant no_x11 {
         configure.args-append --disable-examples
 }
