science/hdf5-18: add http-accessible master_site; closes #27295
git-svn-id: https://svn.macports.org/repository/macports/trunk@73483 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/hdf5-18/Portfile
+++ b/dports/science/hdf5-18/Portfile
@@ -15,7 +15,8 @@ long_description    ${description}
 homepage            http://www.hdfgroup.org/HDF5/
 platforms           darwin
 conflicts           hdf5
-master_sites        ftp://ftp.hdfgroup.org/HDF5/current/src/ \
+master_sites        http://www.hdfgroup.org/ftp/HDF5/current/src \
+                    ftp://ftp.hdfgroup.org/HDF5/current/src/ \
                     ftp://ftp.hdfgroup.org/HDF5/prev-releases/hdf5-${version}/src/
 checksums           md5     27308a145e6c208d57db3f6f2634a0f6 \
                     sha1    68a073656e3b50fca5f6c6b58956bf1531ca94f9 \
