jruby: add nailgun variant (#20552)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73484 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/jruby/Portfile
+++ b/dports/lang/jruby/Portfile
@@ -38,6 +38,14 @@ variant apidocs description "include API documentation" {
   build.target-append  apidocs
 }
 
+variant nailgun description "include Nailgun support" {
+  build.target-append  build-ng
+  post-destroot {
+    xinstall -m 755 -d ${destroot}${prefix}/share/java/${name}/tool/nailgun
+    copy ${worksrcpath}/tool/nailgun/ng ${destroot}${prefix}/share/java/${name}/tool/nailgun
+  }
+}
+
 variant default_ruby description "build without j prefix" {
 
 }
