Variant 'pdf' requires the tex binary from 'texlive'.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73486 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/sbcl/Portfile
+++ b/dports/lang/sbcl/Portfile
@@ -23,7 +23,8 @@ homepage	http://www.sbcl.org
 master_sites	sourceforge
 use_bzip2	yes
 
-patchfiles	patch-use-mach-exception-handler.diff 
+patchfiles	patch-use-mach-exception-handler.diff  \
+    patch-posix-tests.diff
 
 		
 distfiles	${name}-${version}-source${subrevision}${extract.suffix}
@@ -106,7 +107,7 @@ variant html conflicts pdf description {Installs documentation in HTML and Info 
 
 variant pdf conflicts html description {Installs documentation in PDF, HTML and Info formats} {
     patchfiles-delete patch-make-doc.diff
-    depends_build-append bin:dvips:texlive-bin
+    depends_build-append bin:dvips:texlive
     depends_build-append bin:texi2dvi:texinfo
     depends_build-append bin:makeinfo:texinfo
 } 
