--- a/dports/print/a2ps-j/Portfile
+++ b/dports/print/a2ps-j/Portfile
@@ -4,7 +4,7 @@ PortSystem      1.0
 
 name            a2ps-j
 version         1.45
-revision        1
+revision        2
 categories      print textproc japanese
 maintainers     takanori openmaintainer
 description     Text file to PostScript converter (with Japanese support)
@@ -19,7 +19,7 @@ master_sites    macports \
                 ftp://ftp.iij.ad.jp/pub/IIJ/dist/utashiro/perl/ \
                 ftp://ftp.sra.co.jp/pub/lang/perl/sra-scripts/
 distfiles       a2ps.pl-${version}
-patchfiles      patch-nojconv.diff
+patchfiles      patch-a2ps-j.diff
 checksums       md5 3eae209b3c69ec692ee7d61ddd663f6c \
                 sha1 1a938099322767bced3eae525426b80164584d8c \
                 rmd160 2599f86d4433afd3d0ed3490539d87995ce51dab
@@ -30,10 +30,6 @@ depends_run     bin:perl:perl5 \
 extract {
     file mkdir ${worksrcpath}
     copy ${distpath}/a2ps.pl-${version} ${worksrcpath}/${name}
-}
-
-post-patch {
-    reinplace "s|#!/usr/local/bin/perl|#!/usr/bin/env perl|" ${worksrcpath}/${name}
 }
 
 use_configure   no
