xqf: set default variant to +gtk2
git-svn-id: https://svn.macports.org/repository/macports/trunk@73490 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/xqf/Portfile
+++ b/dports/games/xqf/Portfile
@@ -21,6 +21,7 @@ patchfiles			patch-Makefile.am.diff \
                     patch-Makefile.in.diff \
                     patch-loadpixmap.c.diff \
                     patch-xqf-space.diff
+                    
 patch.pre_args		-p1
 
 checksums			md5 a88cecba6abb6349107ab135f1009946 \
@@ -53,4 +54,4 @@ variant gtk2 {		depends_lib-delete	lib:libgtk.1:gtk1 lib:libgdk-pixbuf:gdk-pixbu
 					configure.args-append	--enable-gtk2
 					}
 
-
+default_variants    +gtk2
