--- a/dports/python/py26-sqlalchemy/Portfile
+++ b/dports/python/py26-sqlalchemy/Portfile
@@ -1,26 +1,31 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
-PortGroup python26 1.0
+PortSystem          1.0
+PortGroup           python26 1.0
 
-name                    py26-sqlalchemy
-version                 0.5.8
-categories-append       databases
-platforms               darwin
-maintainers             akitada openmaintainer
-description             Python SQL ORM
-long_description        SQLAlchemy is the Python SQL toolkit and Object \
-                        Relational Mapper that gives application developers \
-                        the full power and flexibility of SQL.
+name                py26-sqlalchemy
+version             0.5.8
+revision            0
+categories          python databases
+platforms           darwin
+maintainers         akitada openmaintainer
 
-homepage                http://www.sqlalchemy.org/
-master_sites            sourceforge:sqlalchemy
-distname                SQLAlchemy-${version}
-checksums               md5     716f6666b691d8a0ebafece9a3da31cd \
-                        sha1    810dfbd4aad58723b86047cd5ff72da7110b191f \
-                        rmd160  1118b0d89b13c8866674199302976f17677e0382
-depends_lib             port:py26-distribute
+description         Python SQL ORM
+long_description    SQLAlchemy is the Python SQL toolkit and Object \
+                    Relational Mapper that gives application developers \
+                    the full power and flexibility of SQL.
+
+homepage            http://www.sqlalchemy.org/
+master_sites        sourceforge:sqlalchemy
+
+distname            SQLAlchemy-${version}
+
+checksums           md5     716f6666b691d8a0ebafece9a3da31cd \
+                    sha1    810dfbd4aad58723b86047cd5ff72da7110b191f \
+                    rmd160  1118b0d89b13c8866674199302976f17677e0382
+
+depends_lib         port:py26-distribute
 
 post-destroot {
     # Install example files not installed by the Makefile
@@ -33,6 +38,6 @@ post-destroot {
     }
 }
 
-livecheck.regex         {<a href="/download\.html"><b>(.+?)</b></a>}
-livecheck.type          regex
-livecheck.url           ${homepage}
+livecheck.regex     {<a href="/download\.html"><b>(.+?)</b></a>}
+livecheck.type      regex
+livecheck.url       ${homepage}
