py26-sqlalchemy: update to version 0.6.5
git-svn-id: https://svn.macports.org/repository/macports/trunk@73493 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-sqlalchemy/Portfile
+++ b/dports/python/py26-sqlalchemy/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-sqlalchemy
-version             0.5.8
+version             0.6.5
 revision            0
 categories          python databases
 platforms           darwin
@@ -21,11 +21,18 @@ master_sites        sourceforge:sqlalchemy
 
 distname            SQLAlchemy-${version}
 
-checksums           md5     716f6666b691d8a0ebafece9a3da31cd \
-                    sha1    810dfbd4aad58723b86047cd5ff72da7110b191f \
-                    rmd160  1118b0d89b13c8866674199302976f17677e0382
+checksums           md5     0152094452e7e94b6505190db6c8ede8 \
+                    sha1    25ed13bbf6976d3c8a426972edf5d2aca101e63c \
+                    rmd160  1b720015b0d9f579b1b8d5e747013436a17a01df
 
 depends_lib         port:py26-distribute
+
+default_variants    +cextensions
+
+variant cextensions description {With C extensions} {
+    build.cmd-append    --with-cextensions
+    destroot.cmd-append --with-cextensions
+}
 
 post-destroot {
     # Install example files not installed by the Makefile
