qstat version update to 2.11
git-svn-id: https://svn.macports.org/repository/macports/trunk@73494 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/qstat/Portfile
+++ b/dports/games/qstat/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem 1.0
 name			qstat
-version			2.10
+version			2.11
 categories		games net
 platforms		darwin
 maintainers		nomaintainer
@@ -15,7 +15,10 @@ long_description	Qstat is a command-line program that gathers real-time \
 			Half-Life, etc).
 
 master_sites		sourceforge
-checksums		md5 ac3ce3dbed5248bd5738a4968460880e
+
+checksums           md5     26c09831660ef9049fe74b786b80d091 \
+                    sha1    107796ab7512bdfdd0c3bb06a3458432b39458c7 \
+                    rmd160  576f1b81449366cd3586798e08ddad72cdfa3ffa
 
 post-destroot {		file mkdir ${destroot}${prefix}/share/doc/${name}
 			xinstall -m 644 -v -W ${worksrcpath} \
