replaced tabs with spaces in qstat Portfile
git-svn-id: https://svn.macports.org/repository/macports/trunk@73495 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/qstat/Portfile
+++ b/dports/games/qstat/Portfile
@@ -1,27 +1,28 @@
 # $Id$
 
 PortSystem 1.0
-name			qstat
-version			2.11
-categories		games net
-platforms		darwin
-maintainers		nomaintainer
-homepage		http://qstat.org/
-description		Gather statistics from game servers
+name                qstat
+version             2.11
+categories          games net
+platforms           darwin
+maintainers         nomaintainer
+homepage            http://qstat.org/
+description         Gather statistics from game servers
 
-long_description	Qstat is a command-line program that gathers real-time \
-			statistics from Internet game servers. Most supported \
-			games are of the first person shooter variety (Quake, \
-			Half-Life, etc).
+long_description    Qstat is a command-line program that gathers real-time \
+                    statistics from Internet game servers. Most supported \
+                    games are of the first person shooter variety (Quake, \
+                    Half-Life, etc).
 
-master_sites		sourceforge
+master_sites        sourceforge
 
 checksums           md5     26c09831660ef9049fe74b786b80d091 \
                     sha1    107796ab7512bdfdd0c3bb06a3458432b39458c7 \
                     rmd160  576f1b81449366cd3586798e08ddad72cdfa3ffa
 
-post-destroot {		file mkdir ${destroot}${prefix}/share/doc/${name}
-			xinstall -m 644 -v -W ${worksrcpath} \
-				ChangeLog CHANGES.txt LICENSE.txt qstatdoc.html \
-				${destroot}${prefix}/share/doc/${name}
-			}
+post-destroot { \
+        file mkdir ${destroot}${prefix}/share/doc/${name}
+        xinstall -m 644 -v -W ${worksrcpath} \
+        ChangeLog CHANGES.txt LICENSE.txt qstatdoc.html \
+        ${destroot}${prefix}/share/doc/${name}
+}
