add description to +gtk2 variant, edited patch arguments
git-svn-id: https://svn.macports.org/repository/macports/trunk@73497 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/xqf/Portfile
+++ b/dports/games/xqf/Portfile
@@ -19,10 +19,9 @@ master_sites		sourceforge
 
 patchfiles			patch-Makefile.am.diff \
                     patch-Makefile.in.diff \
-                    patch-loadpixmap.c.diff \
-                    patch-xqf-space.diff
-                    
-patch.pre_args		-p1
+                    patch-src-loadpixmap_c.diff \
+                    patch-src-game_c.diff \
+                    patch-src-launch_c.diff
 
 checksums			md5 a88cecba6abb6349107ab135f1009946 \
 					sha1 052351ff26cf2f79f6bc2de5aacf63e76a02eb62 \
@@ -49,7 +48,7 @@ post-destroot {		file mkdir ${destroot}${prefix}/share/doc/${name}
 						${destroot}${prefix}/share/doc/${name}
 					}
 
-variant gtk2 {		depends_lib-delete	lib:libgtk.1:gtk1 lib:libgdk-pixbuf:gdk-pixbuf
+variant gtk2 description {Use GTK2} {		depends_lib-delete	lib:libgtk.1:gtk1 lib:libgdk-pixbuf:gdk-pixbuf
 					depends_lib-append	lib:libgtk.2:gtk2
 					configure.args-append	--enable-gtk2
 					}
