--- a/dports/python/py26-hgsvn/Portfile
+++ b/dports/python/py26-hgsvn/Portfile
@@ -5,6 +5,7 @@ PortGroup         python26 1.0
 
 name                    py26-hgsvn
 version                 0.1.8
+revision                1
 categories              python devel
 platforms               darwin
 maintainers             snc openmaintainer
@@ -20,7 +21,12 @@ checksums               md5     56209eae48b955754e09185712123428 \
                         sha1    029eeb5646228194d4677d2f4e3e33bc41da44cc \
                         rmd160  af056571b2d25110b61cffbf5512cb35967a7c1f
 
-depends_lib-append      port:py26-distribute
+depends_lib             port:mercurial \
+                        port:subversion \
+                        port:py26-distribute
+
+patchfiles              patch-hgsvn-ui.py.diff
+
 post-extract            { file copy ${filespath}/ez_setup.py ${worksrcpath} }
 
 post-destroot   {
