--- a/dports/python/py26-hgsubversion/Portfile
+++ b/dports/python/py26-hgsubversion/Portfile
@@ -6,6 +6,7 @@ PortGroup python26 1.0
 
 name                    py26-hgsubversion
 version                 1.1.2
+revision                1
 categories-append       devel
 platforms               darwin
 maintainers             akitada openmaintainer
@@ -21,3 +22,4 @@ checksums               md5     8715a8fd1555a6a1e78810300da547e6 \
                         rmd160  217a4db198cc987683d21420aa153e3915b18ad9
 depends_lib             port:mercurial \
                         port:subversion-python26bindings
+patchfiles              patch-hgsubversion-wrappers.py.diff
