--- a/dports/python/py25-hgsvn/Portfile
+++ b/dports/python/py25-hgsvn/Portfile
@@ -6,6 +6,7 @@ PortGroup         python25 1.0
 
 name                    py25-hgsvn
 version                 0.1.8
+revision                1
 categories-append       devel
 platforms               darwin
 maintainers             saispo
@@ -21,7 +22,12 @@ checksums               md5     56209eae48b955754e09185712123428 \
                         sha1    029eeb5646228194d4677d2f4e3e33bc41da44cc \
                         rmd160  af056571b2d25110b61cffbf5512cb35967a7c1f
 
-depends_lib-append      port:py25-distribute
+depends_lib             port:mercurial \
+                        port:subversion \
+                        port:py25-distribute
+
+patchfiles              patch-hgsvn-ui.py.diff
+
 post-extract            { file copy ${filespath}/ez_setup.py ${worksrcpath} }
 
 post-destroot   {
