--- a/dports/python/py27-hgsvn/Portfile
+++ b/dports/python/py27-hgsvn/Portfile
@@ -5,6 +5,7 @@ PortGroup         python27 1.0
 
 name                    py27-hgsvn
 version                 0.1.8
+revision                1
 categories              python devel
 platforms               darwin
 maintainers             snc openmaintainer
@@ -20,7 +21,11 @@ checksums           md5     56209eae48b955754e09185712123428 \
                     sha1    029eeb5646228194d4677d2f4e3e33bc41da44cc \
                     rmd160  af056571b2d25110b61cffbf5512cb35967a7c1f
 
-depends_lib-append      port:py27-distribute
+depends_lib         port:py27-distribute \
+                    port:mercurial \
+                    port:subversion
+
+patchfiles              patch-hgsvn-ui.py.diff
 
 post-extract            { file copy ${filespath}/ez_setup.py ${worksrcpath} }
 
