xqf: use port:-style dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@73505 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/xqf/Portfile
+++ b/dports/games/xqf/Portfile
@@ -27,10 +27,10 @@ checksums           md5 a88cecba6abb6349107ab135f1009946 \
                     sha1 052351ff26cf2f79f6bc2de5aacf63e76a02eb62 \
                     rmd160 159b9cd02a15fe3b1afd78952152adf5aaafc0c2
 
-depends_lib         lib:libgtk.1:gtk1 \
-                    lib:libgdk-pixbuf:gdk-pixbuf \
+depends_lib         port:gtk1 \
+                    port:gdk-pixbuf \
                     port:p5-xml-parser \
-                    lib:libreadline:readline
+                    port:readline
 
 depends_run         port:qstat
 
@@ -48,8 +48,8 @@ post-destroot {     file mkdir ${destroot}${prefix}/share/doc/${name}
                         ${destroot}${prefix}/share/doc/${name}
                     }
 
-variant gtk2 description {Use GTK2} {       depends_lib-delete  lib:libgtk.1:gtk1 lib:libgdk-pixbuf:gdk-pixbuf
-                    depends_lib-append  lib:libgtk.2:gtk2
+variant gtk2 description {Use GTK2} {       depends_lib-delete  port:gtk1 port:gdk-pixbuf
+                    depends_lib-append  port:gtk2
                     configure.args-append   --enable-gtk2
                     }
 
