--- a/dports/science/iverilog/Portfile
+++ b/dports/science/iverilog/Portfile
@@ -3,7 +3,7 @@
 
 PortSystem 1.0
 name             iverilog
-version          0.9.2
+version          0.9.3
 set branch       [join [lrange [split ${version} .] 0 1] .]
 categories       science
 maintainers      nomaintainer
@@ -21,9 +21,13 @@ platforms        darwin
 
 master_sites     ftp://ftp.icarus.com/pub/eda/verilog/v${branch}/
 distname         verilog-${version}
-checksums           md5     e3b3409f0a7aa382c0bfbb019655f647 \
-                    sha1    ce622b57de80257fb70b7fda95299043ced451d4 \
-                    rmd160  dbec07dc29dfbf69dbc04b9f3bb546745292b630
+
+checksums        sha1    4e6f8c4fbe3cdc6957d61b9adf48b4084fbc751b \
+                 rmd160  9bb722afe9bc0ad7e17d776983c98579b25d2cd5
+
+depends_lib      port:bzip2 \
+                 port:readline \
+                 port:zlib
 
 configure.args   mandir=\\\${prefix}/share/man
 destroot.destdir prefix=${destroot}${prefix}
@@ -32,6 +36,8 @@ platform darwin 8 {
     depends_build-append    port:bison
 }
 
+# g++-4.2: -E, -S, -save-temps and -M options are not allowed with multiple -arch flags
+universal_variant no
 
 test.run         yes
 test.target      check
