--- a/dports/graphics/MyPaint/Portfile
+++ b/dports/graphics/MyPaint/Portfile
@@ -6,7 +6,7 @@ PortSystem                  1.0
 name                        MyPaint
 set my_name                 mypaint
 version                     0.9.0
-revision                    1
+revision                    2
 homepage                    http://mypaint.info/
 categories                  graphics
 maintainers                 ryandesign
@@ -37,7 +37,8 @@ depends_lib                 port:protobuf-python26 \
 
 depends_run                 port:tango-icon-theme
 
-patchfiles                  patch-SConstruct.diff
+patchfiles                  patch-SConstruct.diff \
+                            patch-MyPaint.diff
 
 use_configure               no
 
