glew: update to 1.5.7 (#27337)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73512 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/glew/Portfile
+++ b/dports/graphics/glew/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name               glew
-version            1.5.1
-revision           2
+version            1.5.7
 categories         graphics devel
 platforms          darwin
 license            GPLv2+/BSD/MIT
@@ -18,35 +17,40 @@ long_description   The OpenGL Extension Wrangler Library (GLEW) is a \
                    platform. OpenGL core and extension functionality is \
                    exposed in a single header file.
 
-homepage           http://glew.sourceforge.net
+homepage           http://glew.sourceforge.net/
 master_sites       sourceforge
-distfiles          ${distname}-src.tgz
-checksums          md5 759a59853dfaae4d007b414a3c1712f2 \
-                   sha1 a94113169d46487ccda1bb2fde68fa1803bdf009 \
-                   rmd160 920fdff559976492a2e6acf93d3b02e8286f6b7b
-worksrcdir         ${name}
-use_configure      no
-build.env          GLEW_DEST=${prefix}
-build.args         CC=${configure.cc} LD=${configure.cc}
-destroot.env       GLEW_DEST=${destroot}${prefix}
+extract.suffix     .tgz
+checksums          md5 f913ce9dbde4cd250b932731b3534ded \
+                   sha1 4adc816afbfb65a4969484d10343a88c117ca989 \
+                   rmd160 9087120f26911cdc09109561fa6876211a6e6fc3
 
-patchfiles darwin-glx.patch
+patchfiles         config_Makefile.darwin.patch
 
-pre-patch {
-    # CRLF line endings confuse patch and sh
-    reinplace "s|\r||" ${worksrcpath}/config/config.guess \
-                       ${worksrcpath}/Makefile
+post-patch {
     reinplace "s:/usr/X11R6:${prefix}:g" ${worksrcpath}/config/Makefile.darwin
 }
 
+use_configure      no
+build.env          GLEW_DEST=${prefix}
+build.args         CC=${configure.cc} LD=${configure.cc}
+if {![variant_isset universal] && $build_arch != ""} {
+	build.args-append CFLAGS.ARCH="${configure.cc_archflags}" \
+                      LDFLAGS.ARCH="${configure.ld_archflags}"
+}
+destroot.env       GLEW_DEST=${destroot}${prefix}
+
 variant universal {
-    patchfiles patch-Makefile.diff
-    build.args-append CFLAGS.EXTRA="${configure.universal_cflags}" \
-                      LDFLAGS.EXTRA="${configure.universal_ldflags}"
+    patchfiles-append patch-Makefile.diff
+    build.args-append CFLAGS.ARCH="${configure.universal_cflags}" \
+                      LDFLAGS.ARCH="${configure.universal_ldflags}"
 }
 
 variant	x11 description {Build libGLEW for GLX rather than OpenGL.framework} {
     depends_lib-append port:mesa
     build.args-append GLEW_APPLE_GLX=1
     destroot.args-append GLEW_APPLE_GLX=1
+}
+
+if {${os.subplatform} != "macosx"} {
+	default_variants +x11
 }
