--- a/dports/devel/glib2/Portfile
+++ b/dports/devel/glib2/Portfile
@@ -7,8 +7,7 @@ PortGroup                   archcheck 1.0
 name                        glib2
 conflicts                   glib2-devel
 set my_name                 glib
-version                     2.26.0
-revision                    1
+version                     2.26.1
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  devel
 maintainers                 ryandesign openmaintainer
@@ -29,9 +28,8 @@ long_description            Glib is a library which includes support routines \
 master_sites                gnome:sources/${my_name}/${branch}/ \
                             ftp://ftp.gtk.org/pub/${my_name}/${branch}/
 
-checksums                   md5     9b7dc61f5e389e1cff277a6350c37397 \
-                            sha1    9d7e9dce2add3fadc35079ad291a94f45ebcf706 \
-                            rmd160  176441944f24c274398903ae1816eecfe2cff36b
+checksums                   sha1    8d35d5cf41d681dd6480a16be39f7d3cffbd29f0 \
+                            rmd160  e8b00fce55aa539ee00588500c0162a8877dc060
 
 # ${prefix}/include/glib-2.0/glib/gi18n.h requires -I${prefix}/include to find libintl.h
 # See http://trac.macports.org/changeset/27148
