--- a/dports/lang/javascript-lint/Portfile
+++ b/dports/lang/javascript-lint/Portfile
@@ -15,6 +15,8 @@ master_sites	http://www.javascriptlint.com/download/
 distname	jsl-${version}-src
 checksums	md5 2b94ffa4fab07acabe0c5e73cd49bcdf
 
+patchfiles	patch-jsprf.c
+
 use_configure	no
 worksrcdir	jsl-${version}/src
 
