gnudatalanguage: added a patch to enable python variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@73519 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/gnudatalanguage/Portfile
+++ b/dports/math/gnudatalanguage/Portfile
@@ -45,6 +45,7 @@ depends_lib                 port:zlib \
                             port:fftw-3-single \
                             port:cmsvlib
 
+patchfiles          patch-src-gdlwidget.cpp.diff 
 post-patch {
    # add the CMSVLIB installation path
    reinplace "s|dicom\"|dicom:${prefix}/share/cmsvlib\"|" ${worksrcpath}/src/gdl.cpp
