--- a/dports/x11/sunclock/Portfile
+++ b/dports/x11/sunclock/Portfile
@@ -19,7 +19,7 @@ platforms        darwin
 master_sites     ftp://ftp.ac-grenoble.fr/ge/geosciences/sunclock/ \
                  openbsd:distfiles
 checksums        md5 6e07964a99848018432825c5b3297cc6
-depends_lib      port:jpeg
+depends_lib      port:jpeg port:xpm port:zlib
 
 pre-configure {
     reinplace "s|DESTDIR=/usr|DESTDIR=${prefix}|" "${worksrcpath}/Imakefile"
