argyll: install all headers, not just those pre-select by Jam.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73522 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/argyll/Portfile
+++ b/dports/graphics/argyll/Portfile
@@ -5,6 +5,7 @@ PortSystem              1.0
 
 name                    argyll
 version                 1.3.2
+revision                1
 categories              graphics
 platforms               darwin
 maintainers             nomaintainer
@@ -37,6 +38,10 @@ depends_lib             port:tiff \
 patchfiles              patch-jamfiles.diff \
                         patch-spectro_usbio.c.diff
 
+# parts of Argyll (plot and spectra) use 32-bit Carbon;
+# restrict build arches
+supported_archs         i386 ppc
+
 post-patch {
     # hard-wire libusb-compat info for now
     reinplace "s,@LIBUSBLIBDIR@,${prefix}/lib,g" \
@@ -46,15 +51,12 @@ post-patch {
     reinplace "s,@LIBUSBNAME@,libusb,g" \
         ${worksrcpath}/Jamtop
 
-    # fix IOKit header include: G -> g
+    # fix IOKit header include: G -> g, for case sensitive file systems
     reinplace "/include/s,IOKit/Graphics/IOGraphicsLib,IOKit/graphics/IOGraphicsLib,g" ${worksrcpath}/spectro/dispwin.h
 
-    # set to install headers and libraries
+    # set to install all libraries
     foreach fixfile [exec find ${worksrcpath} -name Jamfile] {
         reinplace "s,#InstallLib,InstallLib,g" ${fixfile}
-    }
-    foreach fixfile [exec find ${worksrcpath} -name Jamfile] {
-        reinplace "s,#InstallFile,InstallFile,g" ${fixfile}
     }
 }
 
@@ -68,9 +70,6 @@ configure {
          ${worksrcpath}/Jambase
 }
 
-# uses Carbon 32-bit, so restrict
-supported_archs         i386 ppc
-
 # 'destroot' actually just installed files locally to
 # the worksrcpath
 
@@ -78,9 +77,11 @@ post-destroot {
     # Install documentation.
     xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
     xinstall -m 644 -W ${worksrcpath} \
-        License.txt License2.txt License3.txt \
         notes.txt Readme.txt ttbd.txt \
         ${destroot}${prefix}/share/doc/${name}
+    system "cp -r ${worksrcpath}/doc/* \
+        ${destroot}${prefix}/share/doc/${name} && \
+        chmod 0644 ${destroot}${prefix}/share/doc/${name}/*"
 
     # Install binaries
     delete ${worksrcpath}/bin/License.txt
@@ -90,8 +91,17 @@ post-destroot {
 
     # Install headers
     xinstall -m 755 -d ${destroot}${prefix}/include/${name}
-    eval xinstall -m 644 [glob ${worksrcpath}/h/*.h] \
-        ${destroot}${prefix}/include/${name}
+    foreach thisdir {cgats gamut h icc imdi jcnf numlib plot \
+                         render rspl scanin spectro target \
+                         ucmm xicc} {
+        eval xinstall -m 644 [glob ${worksrcpath}/${thisdir}/*.h] \
+            ${destroot}${prefix}/include/${name}
+    }
+    # correct some headers: #include <../Y/X> -> <X>
+    foreach header {scanrd_.h gam.h refi.h gamut.h} {
+        reinplace "s,\.\./\[^ /\]*/,,g" \
+            ${destroot}/${prefix}/include/${name}/${header}
+    }
 
     # Install libraries
     xinstall -m 755 -d ${destroot}${prefix}/lib
