lprof: Update to work with Qt 4.7, hopefully; fix library port dependency list.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73523 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/lprof/Portfile
+++ b/dports/graphics/lprof/Portfile
@@ -6,7 +6,7 @@ PortGroup           qt4 1.0
 
 name                lprof
 version             20090113
-revision            4
+revision            5
 categories          graphics
 license             GPL
 maintainers         nomaintainer
@@ -25,10 +25,13 @@ cvs.root            :pserver:anonymous@lprof.cvs.sourceforge.net:/cvsroot/lprof
 cvs.date            ${version}
 cvs.module          lprof
 
-depends_lib-append  port:libusb-compat
+depends_lib-append  port:libusb-compat port:libpng port:tiff port:zlib
 depends_build-append port:cmake
 
 worksrcdir          lprof
+
+# link final 'lprof' executable with PNG and AppKit
+patchfiles          patch-src-CMakeLists.txt.diff
 
 configure.cmd       cmake
 configure.ccache    no
@@ -51,19 +54,33 @@ if {[info exists universal_sysroot]} {
                     -DCMAKE_LD_FLAGS="-Wl,-syslibroot,${universal_sysroot}"
 }
 
+post-patch {
+    # make PNG required
+    reinplace "s,PNG,PNG REQUIRED," ${worksrcpath}/CMakeLists.txt
+
+    # fix IOKit header include: G -> g, for case sensitive file systems
+    reinplace "/include/s,IOKit/Graphics/IOGraphicsLib,IOKit/graphics/IOGraphicsLib,g" ${worksrcpath}/src/videoLUTutils/LUTutil.h
+
+    # fix use of SysBeep -> NSBeep
+    reinplace "s,SysBeep,NSBeep,g" \
+        ${worksrcpath}/src/argyll/spectro/unixio.c
+}
+
 post-destroot {
-  set appdir $destroot$applications_dir/LProf.app
-  set appcdir $appdir/Contents
-  xinstall -m 755 -d $appcdir/MacOS/data
-  xinstall -m 755 -d $appcdir/Resources
-  xinstall -m 755 -d $appcdir/Argyll.kext
-  xinstall $destroot$prefix/bin/lprof $destroot$prefix/bin/icc2it8 $appcdir/MacOS
-  file copy $worksrcpath/build/darwin/lprof.app/Contents/Info.plist $appcdir
-  file copy $worksrcpath/build/darwin/lprof.app/Contents/Resources/lprof.icns $appcdir/Resources
-  file copy $worksrcpath/src/argyll/libusb/Argyll.kext/Info.plist $appcdir/Argyll.kext
-  file copy $applications_dir/Qt/Assistant.app $appcdir/MacOS
-  eval file copy [glob "$destroot$prefix/data/*"] $appcdir/MacOS/data
-  file delete -force $destroot$prefix/bin $destroot$prefix/data
+    # create an OSX .app
+    set appcdir ${destroot}${applications_dir}/LProf.app/Contents
+    xinstall -m 755 -d ${appcdir}/MacOS
+    xinstall -m 755 -d ${appcdir}/Resources
+    xinstall -m 755 -d ${appcdir}/Argyll.kext
+    move ${destroot}${prefix}/bin/lprof ${appcdir}/MacOS
+    move ${destroot}${prefix}/bin/icc2it8 ${appcdir}/MacOS
+    copy ${worksrcpath}/build/darwin/lprof.app/Contents/Info.plist \
+        ${appcdir}
+    copy ${worksrcpath}/build/darwin/lprof.app/Contents/Resources/lprof.icns ${appcdir}/Resources
+    copy ${worksrcpath}/src/argyll/libusb/Argyll.kext/Info.plist \
+        ${appcdir}/Argyll.kext
+    copy ${qt_apps_dir}/Assistant.app ${appcdir}/MacOS
+    move ${destroot}${prefix}/data ${appcdir}/MacOS
 }
 
 livecheck.type      none
