--- a/dports/devel/openssl/Portfile
+++ b/dports/devel/openssl/Portfile
@@ -4,8 +4,8 @@ PortSystem 1.0
 PortGroup  muniversal 1.0
 
 name			openssl
-version			1.0.0a
-revision		1
+version			1.0.0b
+revision		0
 epoch			1
 platforms		darwin freebsd
 categories		devel security
@@ -22,9 +22,9 @@ long_description \
 	cryptography library.
 
 master_sites	http://www.openssl.org/source/
-checksums           md5     e3873edfffc783624cfbdb65e2249cbd \
-                    sha1    b837a9f75a51f456bd533690cf04d3d5714812dc \
-                    rmd160  f46ea1d0875ef523662e652f22faf0f0f261f354
+checksums           md5     104deb3b7e6820cae6de3f49ba0ff2b0 \
+                    sha1    cccb125b29f2fa209edb114258d22aeca4e871a2 \
+                    rmd160  4c661c812315c25b3ab8f0f92d52430529f890d1
 
 depends_lib		port:zlib
 
