--- a/dports/audio/xmms/Portfile
+++ b/dports/audio/xmms/Portfile
@@ -8,8 +8,8 @@ version                 1.2.11
 set branch              [join [lrange [split ${version} .] 0 1] .]
 categories              audio
 maintainers             nomaintainer
-homepage                http://www.xmms.org/
-master_sites            ${homepage}files/${branch}.x/
+homepage                http://legacy.xmms2.org/
+master_sites            ${homepage}
 platforms               darwin
 
 description \
