xmms2: fix homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@73526 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/xmms2/Portfile
+++ b/dports/audio/xmms2/Portfile
@@ -7,7 +7,7 @@ version                 0.5DrLecter
 revision		2
 categories              audio
 maintainers             nomaintainer
-homepage                http://xmms2.xmms.org/
+homepage                http://xmms2.org/
 platforms               darwin
 master_sites            sourceforge
 use_bzip2               yes
