Add tcp-wrappers support. (#27333)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73527 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/bacula/Portfile
+++ b/dports/sysutils/bacula/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name             bacula
 version          5.0.3
+revision         1
 categories       sysutils
 platforms        darwin
 license          GPL
@@ -57,6 +58,7 @@ configure.args   --mandir=${prefix}/share/man \
                  --disable-gnome \
                  --disable-wx-console \
                  --disable-tray-monitor \
+                 --with-tcp-wrappers \
                  ac_cv_lib_ssl_EVP_PKEY_encrypt_old=yes
 
 # The ac_cv_lib_ssl_EVP_PKEY_encrypt_old=yes line above is for openssl 1.0
