kmymoney4: fix message content according to current state
git-svn-id: https://svn.macports.org/repository/macports/trunk@73528 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kmymoney4/Portfile
+++ b/dports/kde/kmymoney4/Portfile
@@ -45,10 +45,10 @@ This port is still EXPERIMENTAL.               \n \
 ============================================== \n \
                                                \n \
 So far known problems are:                     \n \
- - ledger's date input field crashes app       \n \
  - some reports let the app hang               \n \
  - some fonts seem to be missing, since        \n \
 \ \ layout looks a little inhomogenious        \n \
+ - odd balance chart due to missing lines      \n \
                                                \n \
 ============================================== \n \
 "
