--- a/dports/aqua/qtoctave-mac/Portfile
+++ b/dports/aqua/qtoctave-mac/Portfile
@@ -21,12 +21,14 @@ master_sites        http://forja.rediris.es/frs/download.php/1760/
 
 depends_lib-append  path:bin/octave:octave
 depends_build-append port:cmake
+depends_skip_archcheck  octave
 
 checksums           md5     a15edc82c6780dc3764052b04bf902f0 \
                     sha1    1d18058c7549a3f25cd648183db3d99ef755257e \
                     rmd160  9e4725cc2a52cfe9b7ec1e1b74becba8146b74f0
 
-patchfiles          patch-cmakelists_txt.diff
+patchfiles          patch-cmakelists_txt.diff \
+                    patch-qtinfo.diff
 
 configure.cmd       cmake
 configure.pre_args  -DCMAKE_INSTALL_PREFIX=${prefix}
