htop: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@73531 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/htop/Portfile
+++ b/dports/sysutils/htop/Portfile
@@ -32,3 +32,6 @@ pre-configure {
 
 # "String.h" vs <string.h> on case-insensitive FS (#21036)
 build.args          {DEFAULT_INCLUDES="-iquote ."}
+
+livecheck.url       http://htop.sourceforge.net/index.php?page=downloads
+livecheck.regex     The latest version is <b>(\\d+(\\.\\d+)+)
