--- a/dports/kde/kmymoney4-devel/Portfile
+++ b/dports/kde/kmymoney4-devel/Portfile
@@ -6,9 +6,12 @@ PortSystem          1.0
 # See dports/_resources/port1.0/group/kde4-1.1.tcl for more info.
 PortGroup           kde4    1.1
 
-name                kmymoney4
-version             4.5.1
-revision            1
+fetch.type          svn
+svn.url             svn://anonsvn.kde.org/home/kde/trunk/extragear/office/kmymoney
+svn.revision        1197883
+
+name                kmymoney4-devel
+version             4.5-${svn.revision}
 
 categories          kde finance
 maintainers         mk pixilla.com:brad openmaintainer
@@ -20,25 +23,16 @@ platforms           darwin
 homepage            http://kmymoney2.sourceforge.net/index-home.html
 master_sites        sourceforge:kmymoney2
 
-livecheck.type      regex
-livecheck.url       http://sourceforge.net/projects/kmymoney2/files/
-livecheck.regex     "kmymoney-(4\\.\\d+?(\\.\\d+))\\.tar"
+livecheck.type      none
 
-distname            kmymoney-${version}
-use_bzip2           yes
+distname            kmymoney
 
-checksums           md5     b84e4871019a7f44848e65702c4ce3a2 \
-                    sha1    e480ff5546f0796bcb5e922459dabaad9b52cb99 \
-                    rmd160  c8861183280608233528a1ec98960d4f82a6ac3f
-
-conflicts           kmymoney4-devel
+conflicts           kmymoney4
 
 depends_lib-append  port:libofx \
                     port:aqbanking5 \
                     port:kdepimlibs4 \
                     port:oxygen-icons
-# Actually, we don't need this port anymore, since kmymoney 4.5 already gets shipped with an icns
-#                    port:makeicns
 
 pre-fetch {
 	ui_msg \
@@ -56,12 +50,10 @@ So far known problems are:                     \n \
 "
 }
 
-#patchfiles        patch_for_kbanking.diff
-#patchfiles        patch_to_r1197025.diff
-patchfiles        patch-kMyMoneyDateInput_eventFilter.diff
+patchfiles        patch-kMyMoneyDateInput_eventFilter.diff 
 
 patch.dir         ${workpath}/${distname}
 patch.pre_args    -p1
 
-#configure.args-append   -DENABLE_KBANKING=ON
+configure.args-append   -DENABLE_KBANKING=ON
 
