--- a/dports/cross/lpc21isp/Portfile
+++ b/dports/cross/lpc21isp/Portfile
@@ -4,9 +4,9 @@
 PortSystem          1.0
 
 name                lpc21isp
-version             1.64
+version             1.79
 categories          cross devel
-#license             LGPL
+license             LGPL
 maintainers         snc openmaintainer
 description         a NXP MCU programmer
 long_description    In-circuit programming (ISP) tool for the NXP (Philips) \
@@ -14,11 +14,14 @@ long_description    In-circuit programming (ISP) tool for the NXP (Philips) \
 homepage            http://sourceforge.net/projects/lpc21isp/
 platforms           darwin
 master_sites        sourceforge
-checksums           md5 3dda91f9bac1568d43b6217e19501be8 \
-                    sha1 4ad1ba8aef99ac00191c81ebb863f7e04415eb45 \
-                    rmd160 49c5355dcfbe14b18eae324b57529458fc1d3deb
+checksums           md5     93cf6b2a35d7e1d96a2887a21a8b2b77 \
+                    sha1    f95378f680007c0eb0f79a25feb95623132b2cf4
 
-patchfiles          patch-lpc21isp.c.diff
+worksrcdir          ${name}
+
+patch {
+                    reinplace s|gcc|${configure.cc}| ${worksrcpath}/Makefile
+}
 
 use_configure       no
 
