LyX:  * update to 1.6.8  * add python27 variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@73534 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/LyX/Portfile
+++ b/dports/aqua/LyX/Portfile
@@ -5,8 +5,7 @@ PortSystem	        1.0
 PortGroup           qt4 1.0
 
 name			    LyX
-version			    1.6.7
-revision            1
+version			    1.6.8
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories	        aqua
 license             GPL
@@ -31,8 +30,8 @@ master_sites	    http://lyx.cybermirror.org/stable/${branch}.x/ \
 				    ftp://ftp.lyx.org/pub/lyx/stable/${branch}.x/ \
 				    http://gd.tuwien.ac.at/publishing/tex/lyx/stable/${branch}.x/
 
-checksums           sha1    24f4edff7f31dd75c47862351ece0d1906cf2e75 \
-                    rmd160  72d6abeda7c1e93209f52242c27fdc016b0b41e8
+checksums           sha1    caa9672e0dd6c725fcb0eb5c2bbf3ba9871935e5 \
+                    rmd160  bf144d8f9ab0b646f320671dded82544c9bbe83e
 
 configure.pre_args  --prefix=${applications_dir}/LyX.app
 configure.args      --with-frontend=qt4 --without-x --with-included-gettext \
@@ -41,18 +40,23 @@ configure.args      --with-frontend=qt4 --without-x --with-included-gettext \
 
 build.env           LD_FLAGS="-framework Carbon -framework OpenGL -framework AGL -framework QuickTime -framework Cocoa"
 
-variant python25 conflicts python26 description {Use python25} {
+variant python25 conflicts python26 python27 description {Use python25} {
     depends_build-append  port:python25
     configure.python      ${prefix}/bin/python2.5
 }
 
-variant python26 conflicts python25 description {Use python26} {
+variant python26 conflicts python25 python27 description {Use python26} {
     depends_build-append  port:python26
     configure.python      ${prefix}/bin/python2.6
 }
 
-if {![variant_isset python25] && ![variant_isset python26]} {
-    default_variants +python25
+variant python27 conflicts python25 python26 description {Use python27} {
+    depends_build-append    port:python27
+    configure.python        ${prefix}/bin/python2.7
+}
+
+if {![variant_isset python25] && ![variant_isset python26] && ![variant_isset python27]} {
+    default_variants +python26
 }
 
 livecheck.type      regex
