ncdu:  * update to 1.7  * add missing dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@73535 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/ncdu/Portfile
+++ b/dports/sysutils/ncdu/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                ncdu
-version             1.5
+version             1.7
 categories          sysutils
 maintainers         snc openmaintainer
 description         NCurses Disk Usage
@@ -17,8 +17,9 @@ platforms           darwin freebsd
 homepage            http://dev.yorhel.nl/ncdu/
 master_sites        sourceforge
 
-checksums           md5 90a69cc3b2e9f0324eb14e6ce1df0f22 \
-                    sha1 355c6837acb372edb02fe8fb81bdef1ab20656c6 \
-                    rmd160 0b3339975b149f7dccbb624ec88d4a5b4f3050cb
+depends_lib         port:ncurses
+
+checksums           md5     172047c29d232724cc62e773e82e592a \
+                    sha1    56fae723a6fe07b05731f111c53f9631a93989f6
 
 livecheck.regex     ${name}-(\\d\\.\\d)${extract.suffix}
