p5-crypt-gcrypt: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@73536 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-crypt-gcrypt/Portfile
+++ b/dports/perl/p5-crypt-gcrypt/Portfile
@@ -23,3 +23,4 @@ checksums           md5     f9412b1b5c6cd03af46f2023db0ba18f \
 
 configure.pre_args-append	GCRYPTLIBPATH=${prefix}/lib GCRYPTINCPATH=${prefix}/include
 
+livecheck.regex     ${perl5.module}-(\\d+\\.\\d+)
