--- a/dports/python/py26-crypto/Portfile
+++ b/dports/python/py26-crypto/Portfile
@@ -4,8 +4,7 @@ PortSystem       1.0
 PortGroup        python26 1.0
 
 name             py26-crypto
-version          2.0.1
-revision         1
+version          2.3
 categories       python security
 platforms        darwin freebsd
 maintainers      ram openmaintainer
@@ -15,23 +14,20 @@ long_description collection of cryptographic algorithms and protocols, \
   ARC2, Blowfish, CAST, DES, Triple-DES, IDEA, RC5, ARC4, simple XOR, \
   RSA, DSA, ElGamal, qNEW.
 
-homepage         http://www.amk.ca/python/code/crypto.html
-master_sites     http://www.amk.ca/files/python/crypto/
+homepage         http://www.dlitz.net/software/pycrypto/
+master_sites     http://ftp.dlitz.net/pub/dlitz/crypto/pycrypto/
 distname         pycrypto-${version}
 
-checksums        md5 4d5674f3898a573691ffb335e8d749cd \
-                 sha1 c77cdefdfb06e4749690013a9a9e1600ab14e26f \
-                 rmd160 5ce938a24f77f414e42680c17ef9b6dc8de94a2e
+checksums        md5 2b811cfbfc342d83ee614097effb8101 \
+                 sha1 96b33b77e729893bd0837a09a6aa7a12b5070037 \
+                 rmd160 5b7b15aab3f5e33113ba197a2edd629c72595374
 
-patchfiles       patch-hash_modules.diff
-
-#test.run        yes
-#test.cmd        ${python.bin} test.py
-test.target
+test.run        yes
+test.target     test
 
 post-destroot {
   xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
-  xinstall -m 644 -W ${worksrcpath} ACKS ChangeLog LICENSE README TODO \
+  xinstall -m 644 -W ${worksrcpath} ACKS COPYRIGHT README TODO \
     ${destroot}${prefix}/share/doc/${name}
 }
 
