--- a/dports/graphics/libpixman-devel/Portfile
+++ b/dports/graphics/libpixman-devel/Portfile
@@ -7,7 +7,7 @@ PortGroup               muniversal 1.0
 name                    libpixman-devel
 conflicts               libpixman
 set my_name             pixman
-version                 0.19.6
+version                 0.21.2
 categories              graphics
 platforms               darwin
 maintainers             ryandesign
@@ -25,15 +25,13 @@ long_description        libpixman is a generic library for manipulating pixel \
                         regions. A PixRegion is a set of Y-X banded rectangles \
                         that cover the desired region.
 
-checksums               sha1    dad3549eb2d4e92a510b8c43f6b8d75d9e946a5a \
-                        rmd160  c4cd54ceeacc02f6fffcc604cac9663547c2b0f0
-
-patchfiles              patch-test-utils.c.diff
+checksums               sha1    bb5cba514fe6756f9264a6995ec9dfed4d7439b5 \
+                        rmd160  cb4ae97a9eb2fc6d8b58a234bf810165032150eb
 
 configure.args          --disable-gtk
 
 post-destroot {
-    set docdir ${destroot}${prefix}/share/doc/${name}-${version}
+    set docdir ${destroot}${prefix}/share/doc/${name}
     xinstall -d ${docdir}
     eval xinstall -m 644 -W ${worksrcpath} \
         AUTHORS \
