at-spi: add build dep on intltool
git-svn-id: https://svn.macports.org/repository/macports/trunk@73543 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/at-spi/Portfile
+++ b/dports/gnome/at-spi/Portfile
@@ -21,7 +21,7 @@ checksums           md5     29fdf7934e98efda5fe0ab74ab4d3f29 \
                     sha1    d7bf78555e8025e42325437d7809e1c98a35389e \
                     rmd160  f317c5ad38a6f79b1917f3173e77e4746f79408b
 
-depends_build       port:p5-xml-parser \
+depends_build       port:intltool \
                     port:pkgconfig
 
 depends_lib         port:atk \
