sdlconsole: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@73547 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/sdlconsole/Portfile
+++ b/dports/devel/sdlconsole/Portfile
@@ -27,4 +27,4 @@ depends_lib port:libsdl_image
 
 configure.args	--with-sdl-prefix=${prefix} --disable-sdltest
 
-livecheck.regex	"${name}-(\[0-9\]+(\\.\[0-9\]+)+) released"
+livecheck.regex	${name}-(\[0-9.\]+)
