--- a/dports/devel/yaml-cpp/Portfile
+++ b/dports/devel/yaml-cpp/Portfile
@@ -4,7 +4,7 @@ PortSystem 			1.0
 PortGroup 			cmake 1.0
 
 name 				yaml-cpp
-version 			0.2.4
+version 			0.2.5
 maintainers 		mnick
 
 categories 			devel
@@ -16,6 +16,7 @@ platforms 			darwin
 homepage 			http://code.google.com/p/yaml-cpp/
 master_sites 		googlecode:yaml-cpp
 
-checksums           sha1    fba95be42777f2ea1b202a261bd32126f56491dc \
-                    rmd160  4e94023c997398be9016311793aafb39f9692110
+checksums           sha1    2a57d2a8e8dd2a5a368465201299af3bc22d08ae \
+                    rmd160  d23efc29c794f00c650f536b6492555fe5b0510c
 
+patchfiles 			patch-token.h.diff
