--- a/dports/graphics/lprof/Portfile
+++ b/dports/graphics/lprof/Portfile
@@ -25,8 +25,10 @@ cvs.root            :pserver:anonymous@lprof.cvs.sourceforge.net:/cvsroot/lprof
 cvs.date            ${version}
 cvs.module          lprof
 
-depends_lib-append  port:libusb-compat port:libpng port:tiff port:zlib
+depends_lib-append  port:libusb-compat port:libpng port:tiff \
+                    port:zlib port:qt-assistant
 depends_build-append port:cmake
+depends_skip_archcheck cmake
 
 worksrcdir          lprof
 
@@ -47,11 +49,11 @@ configure.args      -DCMAKE_BUILD_WITH_INSTALL_RPATH=ON \
                     -DQTTRANS_LRELEASE_EXECUTABLE=${qt_lrelease_cmd} \
                     -Wno-dev .
 
-if {[info exists universal_sysroot]} {
+if {${configure.sdkroot} != ""} {
     configure.args-append \
-                    -DCMAKE_C_FLAGS_RELEASE="-isysroot ${universal_sysroot}" \
-                    -DCMAKE_CXX_FLAGS_RELEASE="-isysroot ${universal_sysroot}" \
-                    -DCMAKE_LD_FLAGS="-Wl,-syslibroot,${universal_sysroot}"
+        -DCMAKE_C_FLAGS_RELEASE="-isysroot ${configure.sdkroot}" \
+        -DCMAKE_CXX_FLAGS_RELEASE="-isysroot ${configure.sdkroot}" \
+        -DCMAKE_LD_FLAGS="-Wl,-syslibroot,${configure.sdkroot}"
 }
 
 post-patch {
