kdesvn: disable universal because kdelibs4 is not universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@73551 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdesvn/Portfile
+++ b/dports/kde/kdesvn/Portfile
@@ -33,3 +33,6 @@ patchfiles          app-install-and-icon-fix.patch \
                     no-kdesdk-conflict.patch
 
 configure.args-append ../${distname}
+
+# kdelibs4 is not universal
+universal_variant   no
