kdesvn: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@73552 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdesvn/Portfile
+++ b/dports/kde/kdesvn/Portfile
@@ -36,3 +36,7 @@ configure.args-append ../${distname}
 
 # kdelibs4 is not universal
 universal_variant   no
+
+livecheck.type      regex
+livecheck.url       ${homepage}wiki/DownLoads
+livecheck.regex     ${name}-(\[0-9.\]+)${extract.suffix}
