--- a/dports/irc/xchat2/Portfile
+++ b/dports/irc/xchat2/Portfile
@@ -34,6 +34,7 @@ patchfiles          patch-gtk2.19.7.diff
 patch.pre_args      -p1
 
 configure.args      --disable-python --disable-mmx --enable-ipv6 --disable-openssl
+universal_variant   no
 
 variant xft conflicts quartz description "Enable Xft2 font support" { 
     configure.args-append --enable-xft
