pspp-devel: update to 20101116030508
git-svn-id: https://svn.macports.org/repository/macports/trunk@73556 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20101108040501
-set buildhash       g08d746
+set buildstamp      20101116030508
+set buildhash       g38ba1e
 version             0.7.6
-revision            2
+revision            3
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -36,8 +36,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    674062fd19ce2fdc2002dab3a9f006aaf53093c8 \
-                    rmd160  1b9beeb3af9a65885594905183415bbba402c8bd
+checksums           sha1    27a548516f2b427d5e76b47a054a6c4b7d63da4f \
+                    rmd160  bb26c6ec0393f5cd670d9e856bfc3ae69703e20f
 
 #configure.optflags  -O0
 #configure.cflags-append -g
