--- a/dports/tex/texlive-htmlxml/Portfile
+++ b/dports/tex/texlive-htmlxml/Portfile
@@ -6,7 +6,7 @@ PortGroup           texlive 1.0
 
 name                texlive-htmlxml
 version             13822
-revision            3
+revision            4
 
 categories          tex
 maintainers         dports
@@ -36,5 +36,8 @@ texlive.exclude     texmf-dist/scripts/tex4ht/ht.sh \
                     texmf-dist/scripts/tex4ht/htxelatex.sh \
                     texmf-dist/scripts/tex4ht/htxetex.sh \
                     texmf-dist/scripts/tex4ht/mk4ht.pl
+
+depends_lib-append  port:texlive-latex-recommended \
+                    port:texlive-generic-recommended
 
 texlive.texmfport
