gsed: set supported_archs on darwin 8 rather than using muniversal just to prevent building 64-bit (which it doesn't entirely do anyway)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73561 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/gsed/Portfile
+++ b/dports/textproc/gsed/Portfile
@@ -2,7 +2,6 @@
 # $Id$
 
 PortSystem      1.0
-PortGroup       muniversal 1.0
 
 name            gsed
 set my_name     sed
@@ -55,7 +54,7 @@ test.target     check
 platform darwin 8 {
     # Bad things happen running 64-bit gsed on Tiger. Fine on Leopard.
     # See https://trac.macports.org/ticket/18297.
-    set universal_archs_supported {i386 ppc}
+    supported_archs i386 ppc
 }
 
 variant with_default_names description {Install files without 'g' prefix} {
