ssmtp: update to 2.62 (fixes #20735)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73562 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/ssmtp/files/patch-Makefile.in
+++ b/dports/mail/ssmtp/files/patch-Makefile.in
@@ -1,6 +1,6 @@
---- Makefile.in.org	Mon May 12 20:15:29 2003
-+++ Makefile.in	Mon May 12 20:16:36 2003
-@@ -17,11 +17,11 @@
+--- Makefile.in.orig	2008-02-29 13:50:15.000000000 +1100
++++ Makefile.in	2010-11-18 18:25:57.000000000 +1100
+@@ -18,11 +18,11 @@
  CONFIGURATION_FILE=$(SSMTPCONFDIR)/ssmtp.conf
  REVALIASES_FILE=$(SSMTPCONFDIR)/revaliases
  
@@ -12,5 +12,5 @@
 -GEN_CONFIG=$(srcdir)/generate_config
 +#GEN_CONFIG=$(srcdir)/generate_config
  
- SRCS=ssmtp.c arpadate.c base64.c
+ SRCS=ssmtp.c arpadate.c base64.c xgethostname.c @SRCS@
  
