--- a/dports/mail/ssmtp/Portfile
+++ b/dports/mail/ssmtp/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name		ssmtp
-version		2.61
-revision	2
+version		2.62
 categories	mail
 maintainers	nomaintainer
 description	Sendmail alternative for small routers (outgoing mail only)
@@ -15,14 +14,18 @@ long_description	This is sSMTP, a program that replaces sendmail on workstations
 			domain in the From: line with a different one.
 platforms	darwin freebsd
 homepage    http://packages.qa.debian.org/s/ssmtp.html
-master_sites	http://ftp.debian.org/debian/pool/main/s/${name}/ \
+master_sites	debian:s/${name}/ \
 		ftp://ftp.icm.edu.pl/pub/Linux/debian/pool/main/s/${name}/
 distfiles	${name}_${version}.orig${extract.suffix}
-checksums	md5 957e6fff08625fe34f4fc33d0925bbc9
+checksums	md5 257ac04e62ab7e3616e220333a1140cb \
+		sha1 5c15aafb252f6cb11e4b93140a1457b6cb0d0fb8
 
 depends_lib	port:openssl
 
-patchfiles	patch-ssmtp.c patch-generate_config patch-Makefile.in patch-configure.in
+worksrcdir	$name
+
+patchfiles	patch-ssmtp.c patch-generate_config patch-Makefile.in \
+		patch-configure.in 02-557725-solaris.patch
 
 use_autoconf yes
 configure.args	--enable-ssl
