--- a/dports/mail/ssmtp/Portfile
+++ b/dports/mail/ssmtp/Portfile
@@ -1,42 +1,43 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem      1.0
 
-name		ssmtp
-version		2.62
-categories	mail
-maintainers	nomaintainer
-description	Sendmail alternative for small routers (outgoing mail only)
-long_description	This is sSMTP, a program that replaces sendmail on workstations that \
-			should send their mail via the departmental mailhub from which they pick up \
-			their mail (via pop, imap, rsmtp, pop_fetch, NFS... or the like).  This \
-			program accepts mail and sends it to the mailhub, optionally replacing the \
-			domain in the From: line with a different one.
-platforms	darwin freebsd
-homepage    http://packages.qa.debian.org/s/ssmtp.html
-master_sites	debian:s/${name}/ \
-		ftp://ftp.icm.edu.pl/pub/Linux/debian/pool/main/s/${name}/
-distfiles	${name}_${version}.orig${extract.suffix}
-checksums	md5 257ac04e62ab7e3616e220333a1140cb \
-		sha1 5c15aafb252f6cb11e4b93140a1457b6cb0d0fb8
+name            ssmtp
+version         2.62
+categories      mail
+maintainers     nomaintainer
+description     Sendmail alternative for small routers (outgoing mail only)
+long_description    This is sSMTP, a program that replaces sendmail on workstations that \
+                    should send their mail via the departmental mailhub from which they pick up \
+                    their mail (via pop, imap, rsmtp, pop_fetch, NFS... or the like).  This \
+                    program accepts mail and sends it to the mailhub, optionally replacing the \
+                    domain in the From: line with a different one.
+platforms       darwin freebsd
+homepage        http://packages.qa.debian.org/s/ssmtp.html
+master_sites    debian:s/${name}/ \
+                ftp://ftp.icm.edu.pl/pub/Linux/debian/pool/main/s/${name}/
+distfiles       ${name}_${version}.orig${extract.suffix}
+checksums       md5 257ac04e62ab7e3616e220333a1140cb \
+                sha1 5c15aafb252f6cb11e4b93140a1457b6cb0d0fb8
 
-depends_lib	port:openssl
+depends_lib     port:openssl
 
-worksrcdir	$name
+worksrcdir      $name
 
-patchfiles	patch-ssmtp.c patch-generate_config patch-Makefile.in \
-		patch-configure.in 02-557725-solaris.patch
+patchfiles      patch-ssmtp.c patch-generate_config patch-Makefile.in \
+                patch-configure.in 02-557725-solaris.patch
 
-use_autoconf yes
-configure.args	--enable-ssl
+use_autoconf    yes
+configure.args  --enable-ssl
 
 destroot.destdir prefix=${destroot}${prefix} \
                  mandir=${destroot}${prefix}/share/man/man8
 
 post-destroot {
-	xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
-	xinstall -W ${worksrcpath} README INSTALL COPYING \
-		${destroot}${prefix}/share/doc/${name}
+    xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
+    xinstall -W ${worksrcpath} README INSTALL COPYING \
+        ${destroot}${prefix}/share/doc/${name}
 
-	xinstall ${worksrcpath}/ssmtp.conf ${destroot}${prefix}/etc/${name}/ssmtp.conf.sample
+    xinstall ${worksrcpath}/ssmtp.conf ${destroot}${prefix}/etc/${name}/ssmtp.conf.sample
 }
