skip browser variants (#27270)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73564 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/xfce/xfce-utils/Portfile
+++ b/dports/xfce/xfce-utils/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name		xfce-utils
 version		4.6.2
+revision	1
 categories	xfce
 platforms	darwin
 maintainers	afb
@@ -22,12 +23,5 @@ depends_lib	port:libxfce4util port:xfconf
 configure.env	PERL=${prefix}/bin/perl5
 configure.args	--disable-gdm --with-xsession-prefix=${prefix}
 
-variant midori description "use midori as the default browser" {
-	depends_lib-append port:midori
-	configure.args-append --with-browser=midori
-}
-
-variant firefox description "use firefox as the default browser" {
-	depends_lib port:firefox-x11
-	configure.args-append --with-browser=firefox
-}
+# make sure that midori is added to the browser search list
+configure.args-append --with-browser=midori
