xfce: add midori browser
git-svn-id: https://svn.macports.org/repository/macports/trunk@73565 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/xfce/xfce/Portfile
+++ b/dports/xfce/xfce/Portfile
@@ -31,7 +31,8 @@ depends_lib	port:libxfcegui4 \
 		port:orage \
 		port:mousepad \
 		port:Thunar \
-		port:Terminal
+		port:Terminal \
+		port:midori
 
 distfiles
 
