allow building with universal perl too
git-svn-id: https://svn.macports.org/repository/macports/trunk@73567 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/irc/xchat2/Portfile
+++ b/dports/irc/xchat2/Portfile
@@ -33,7 +33,8 @@ depends_lib         port:gtk2 path:bin/perl:perl5
 patchfiles          patch-gtk2.19.7.diff
 patch.pre_args      -p1
 
-configure.args      --disable-python --disable-mmx --enable-ipv6 --disable-openssl
+configure.args      --disable-python --disable-mmx --enable-ipv6 \
+                    --disable-openssl --disable-dependency-tracking
 universal_variant   no
 
 variant xft conflicts quartz description "Enable Xft2 font support" { 
