CImg: update to 1.4.6 and add supported_archs noarch; see #27366
git-svn-id: https://svn.macports.org/repository/macports/trunk@73571 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/CImg/Portfile
+++ b/dports/devel/CImg/Portfile
@@ -4,10 +4,11 @@
 PortSystem          1.0
 
 name                CImg
-version             1.4.5
+version             1.4.6
 categories          devel
 platforms           darwin
 maintainers         workisfun.ru:ivan
+supported_archs     noarch
 license             CeCILL-C CeCILL
 
 description         C++ Template Image Processing Toolkit
@@ -18,8 +19,8 @@ homepage            http://cimg.sourceforge.net/
 master_sites        sourceforge:cimg
 use_zip             yes
 
-checksums           sha1    737a637c7c10c67bea53dabc9d91003288f7d647 \
-                    rmd160  4f249feb5f3333ef4e544a6b776ab47d0741f78d
+checksums           sha1    ad2f78ef58ba3da598c7306874d8789cb1b38ef1 \
+                    rmd160  80095128849c7ef7032844f922d1e5782f816150
 
 use_configure       no
 
