unison: fix destroot failure (#26819)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73574 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/unison/Portfile
+++ b/dports/net/unison/Portfile
@@ -4,6 +4,7 @@
 PortSystem        1.0
 name              unison
 version           2.32.52
+revision          1
 categories        net
 maintainers       nomaintainer
 description       Unison File Synchronizer
@@ -19,7 +20,9 @@ platforms         darwin openbsd
 checksums           md5     0701f095c1721776a0454b94607eda48 \
                     sha1    68ea5709de4fcc2f9aef7b01b24637503b61b5ac \
                     rmd160  8216a2e482d5a445dd7acdb62e1bb6377e90d1a1
-patchfiles        patch-Makefile
+
+patchfiles        patch-Makefile \
+                  patch-update.mli.diff
 
 use_configure	no
 
