bcfg2: update maintainer email address; see #27351
git-svn-id: https://svn.macports.org/repository/macports/trunk@73575 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/bcfg2/Portfile
+++ b/dports/sysutils/bcfg2/Portfile
@@ -7,7 +7,7 @@ PortGroup           python26 1.0
 name                bcfg2
 version             1.0.1
 categories          sysutils python
-maintainers         ices.utexas.edu:solj
+maintainers         gmail.com:sol.jerome
 license             BSD
 description         Bcfg2 configuration management system
 long_description    Bcfg2 helps system administrators deploy complex \
